Convert day2 debug to using colog

--- a/day02/Makefile
+++ b/day02/Makefile
@@ -4,6 +4,10 @@ build:
 	cargo build --verbose
 	cp target/debug/$(prog) $(prog).day
 
+release:
+	cargo build -r --verbose
+	cp target/release/$(prog) $(prog).day
+
 test:
 	cargo test --verbose
 
@@ -22,4 +26,4 @@ coverage:
 
 all: build
 
-.PHONY: build test all clean format lint coverage
+.PHONY: build release test all clean format lint coverage
