--- a/day03/Cargo.toml
+++ b/day03/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 colog = "1.3.0"
 filelib = { path = "../filelib" }
 log = { version = "0.4.22", features=["max_level_trace", "release_max_level_warn"] }
+regex = "1.11.1"
