--- a/day20/Cargo.toml
+++ b/day20/Cargo.toml
@@ -8,4 +8,6 @@ edition = "2021"
 [dependencies]
 colog = "1.3.0"
 filelib = { path = "../filelib" }
+gridlib = { path = "../gridlib" }
+itertools = "0.13.0"
 log = { version = "0.4.22", features=["max_level_trace", "release_max_level_warn"] }
